tests/snapshot/error/source_locations/expression/typeof/load_dynamic_throws.js
Object.defineProperty(globalThis, 'x', {
  get() {
    throw new Error('Error on get');
  }
});

eval('typeof x');